--- a/project-files/dynamips/04ff1333-1e9c-47f9-bc16-6d66c7fb4fe1/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/04ff1333-1e9c-47f9-bc16-6d66c7fb4fe1/configs/i1_startup-config.cfg
@@ -1,4 +1,5 @@
 !
+!
 
 !
 version 12.4
@@ -15,9 +16,8 @@ boot-end-marker
 !
 no aaa new-model
 memory-size iomem 5
-no ip routing
 no ip icmp rate-limit unreachable
-no ip cef
+ip cef
 !
 !
 !
@@ -53,7 +53,6 @@ ip tcp synwait-time 5
 interface FastEthernet0/0
  description *** Unused for Layer2 EtherSwitch ***
  no ip address
- no ip route-cache
  shutdown
  duplex auto
  speed auto
@@ -61,7 +60,6 @@ interface FastEthernet0/0
 interface FastEthernet0/1
  description *** Unused for Layer2 EtherSwitch ***
  no ip address
- no ip route-cache
  shutdown
  duplex auto
  speed auto
@@ -82,6 +80,7 @@ interface FastEthernet1/2
  speed 100
 !
 interface FastEthernet1/3
+ switchport mode trunk
  duplex full
  speed 100
 !
@@ -135,7 +134,6 @@ interface FastEthernet1/15
 !
 interface Vlan1
  no ip address
- no ip route-cache
  shutdown
 !
 ip forward-protocol nd
