--- a/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
@@ -15,9 +15,8 @@ boot-end-marker
 !
 no aaa new-model
 memory-size iomem 5
-no ip routing
 no ip icmp rate-limit unreachable
-no ip cef
+ip cef
 !
 !
 !
@@ -53,7 +52,6 @@ ip tcp synwait-time 5
 interface FastEthernet0/0
  description *** Unused for Layer2 EtherSwitch ***
  no ip address
- no ip route-cache
  shutdown
  duplex auto
  speed auto
@@ -61,7 +59,6 @@ interface FastEthernet0/0
 interface FastEthernet0/1
  description *** Unused for Layer2 EtherSwitch ***
  no ip address
- no ip route-cache
  shutdown
  duplex auto
  speed auto
@@ -140,8 +137,18 @@ interface FastEthernet1/15
 !
 interface Vlan1
  no ip address
- no ip route-cache
  shutdown
+!
+interface Vlan2
+ ip address 200.191.162.82 255.255.255.0 secondary
+ ip address 10.112.0.2 255.255.255.0
+ no autostate
+ ipv6 address 2100:0:0:200::2/126
+!
+interface Vlan3
+ ip address 10.112.1.2 255.255.255.0
+ no autostate
+ ipv6 address 2100:0:0:201::2/126
 !
 ip forward-protocol nd
 !
