--- a/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
@@ -68,18 +68,21 @@ interface FastEthernet1/0
  ip address 10.112.6.5 255.255.255.252
  duplex full
  speed 100
+ ipv6 address 2100:0:0:206::5/126
 !
 interface FastEthernet1/1
  no switchport
  ip address 10.112.6.13 255.255.255.252
  duplex full
  speed 100
+ ipv6 address 2100:0:0:206::D/126
 !
 interface FastEthernet1/2
  no switchport
  ip address 10.112.6.18 255.255.255.252
  duplex full
  speed 100
+ ipv6 address 2100:0:0:206::12/126
 !
 interface FastEthernet1/3
  switchport mode trunk
@@ -140,15 +143,25 @@ interface Vlan1
  shutdown
 !
 interface Vlan2
- ip address 200.191.162.82 255.255.255.0 secondary
+ ip address 200.191.162.82 255.255.255.240 secondary
  ip address 10.112.0.2 255.255.255.0
  no autostate
  ipv6 address 2100:0:0:200::2/126
 !
 interface Vlan3
+ ip address 200.191.162.114 255.255.255.240 secondary
  ip address 10.112.1.2 255.255.255.0
  no autostate
  ipv6 address 2100:0:0:201::2/126
+!
+interface Vlan4
+ ip address 10.112.2.2 255.255.255.0
+ ipv6 address 2100:0:0:202::2/126
+!
+interface Vlan5
+ ip address 200.191.162.98 255.255.255.240 secondary
+ ip address 10.112.3.2 255.255.255.0
+ ipv6 address 2100:0:0:203::2/126
 !
 ip forward-protocol nd
 !
