--- a/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
@@ -143,25 +143,24 @@ interface Vlan1
  shutdown
 !
 interface Vlan2
- ip address 200.191.162.82 255.255.255.240 secondary
- ip address 10.112.0.2 255.255.255.0
+ ip address 200.191.162.94 255.255.255.240 secondary
+ ip address 10.112.0.254 255.255.255.0
  no autostate
- ipv6 address 2100:0:0:200::2/126
+ ipv6 address 2100::200:FFFF:FFFF:FFFF:FFFF/64
 !
 interface Vlan3
- ip address 200.191.162.114 255.255.255.240 secondary
- ip address 10.112.1.2 255.255.255.0
+ ip address 200.191.162.118 255.255.255.240 secondary
+ ip address 10.112.1.254 255.255.255.0
  no autostate
- ipv6 address 2100:0:0:201::2/126
+ ipv6 address 2100::201:FFFF:FFFF:FFFF:FFFF/64
 !
 interface Vlan4
- ip address 10.112.2.2 255.255.255.0
- ipv6 address 2100:0:0:202::2/126
+ ip address 10.112.2.254 255.255.255.0
+ ipv6 address 2100::202:FFFF:FFFF:FFFF:FFFF/64
 !
 interface Vlan5
- ip address 200.191.162.98 255.255.255.240 secondary
- ip address 10.112.3.2 255.255.255.0
- ipv6 address 2100:0:0:203::2/126
+ ip address 10.112.3.254 255.255.255.0
+ ipv6 address 2100::203:FFFF:FFFF:FFFF:FFFF/64
 !
 ip forward-protocol nd
 !
