Ips, gateways e nat/pat

--- a/project-files/dynamips/04ff1333-1e9c-47f9-bc16-6d66c7fb4fe1/configs/i1_startup-config.cfg
+++ b/project-files/dynamips/04ff1333-1e9c-47f9-bc16-6d66c7fb4fe1/configs/i1_startup-config.cfg
@@ -1,8 +1,4 @@
 !
-!
-!
-!
-!
 
 !
 version 12.4
@@ -88,6 +84,7 @@ interface FastEthernet1/3
  speed 100
 !
 interface FastEthernet1/4
+ switchport mode trunk
  duplex full
  speed 100
 !
