--- a/project-files/dynamips/a0d81492-4746-410a-83ea-8e1b60d8ae6a/configs/i10_startup-config.cfg
+++ b/project-files/dynamips/a0d81492-4746-410a-83ea-8e1b60d8ae6a/configs/i10_startup-config.cfg
@@ -1,9 +1,7 @@
 !
-!
-!
 
 !
-! Last configuration change at 20:27:27 UTC Tue Jan 12 2021
+! Last configuration change at 23:15:38 UTC Fri Jan 15 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -64,8 +62,7 @@ interface FastEthernet1/0
  speed auto
 !
 interface FastEthernet1/1
- no ip address
- shutdown
+ ip address 192.168.2.1 255.255.254.0
  duplex auto
  speed auto
 !
