--- a/project-files/dynamips/32ca53b6-0a51-4d64-964f-137bfe0d368c/configs/i5_startup-config.cfg
+++ b/project-files/dynamips/32ca53b6-0a51-4d64-964f-137bfe0d368c/configs/i5_startup-config.cfg
@@ -1,9 +1,7 @@
 !
-!
-!
 
 !
-! Last configuration change at 20:25:08 UTC Tue Jan 12 2021
+! Last configuration change at 23:52:36 UTC Fri Jan 15 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -56,17 +54,23 @@ ip tcp synwait-time 5
 !
 interface FastEthernet0/0
  ip address 10.112.6.2 255.255.255.252
+ ip nat inside
+ ip virtual-reassembly in
  duplex half
  ipv6 address 2100:0:0:206::2/126
 !
 interface FastEthernet1/0
  ip address 10.112.6.6 255.255.255.252
+ ip nat inside
+ ip virtual-reassembly in
  duplex auto
  speed auto
  ipv6 address 2100:0:0:206::6/126
 !
 interface FastEthernet1/1
  no ip address
+ ip nat outside
+ ip virtual-reassembly in
  shutdown
  duplex auto
  speed auto
@@ -76,7 +80,10 @@ no ip http server
 no ip http secure-server
 !
 !
+ip nat pool MYNATPOOL 200.191.162.121 200.191.162.125 netmask 255.255.255.248
+ip nat inside source list 2 pool MYNATPOOL overload
 !
+access-list 2 permit 10.112.0.0 0.0.255.255
 no cdp log mismatch duplex
 !
 !
