--- a/project-files/dynamips/5c330155-99a7-4d0c-b481-9f7edd80e1e8/configs/i2_startup-config.cfg
+++ b/project-files/dynamips/5c330155-99a7-4d0c-b481-9f7edd80e1e8/configs/i2_startup-config.cfg
@@ -1,9 +1,4 @@
 !
-!
-!
-!
-!
-!
 
 !
 version 12.4
@@ -87,6 +82,7 @@ interface FastEthernet1/2
  speed 100
 !
 interface FastEthernet1/3
+ switchport mode trunk
  duplex full
  speed 100
 !
@@ -123,6 +119,7 @@ interface FastEthernet1/11
  speed 100
 !
 interface FastEthernet1/12
+ switchport mode trunk
  duplex full
  speed 100
 !
