--- a/project-files/dynamips/fa810282-21f3-41e8-a50c-08e271a4743c/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/fa810282-21f3-41e8-a50c-08e271a4743c/configs/i3_startup-config.cfg
@@ -68,21 +68,21 @@ interface FastEthernet0/1
 !
 interface FastEthernet1/0
  no switchport
- ip address 10.112.6.1 255.255.255.0
+ ip address 10.112.6.1 255.255.255.252
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::1/126
 !
 interface FastEthernet1/1
  no switchport
- ip address 10.112.6.9 255.255.255.0
+ ip address 10.112.6.9 255.255.255.252
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::9/126
 !
 interface FastEthernet1/2
  no switchport
- ip address 10.112.6.17 255.255.255.0
+ ip address 10.112.6.17 255.255.255.252
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::11/126
@@ -99,17 +99,19 @@ interface FastEthernet1/4
 !
 interface FastEthernet1/5
  no switchport
- ip address 10.112.5.254 255.255.255.0
+ ip address 200.191.162.65 255.255.255.192 secondary
+ ip address 10.112.5.1 255.255.255.0
  duplex full
  speed 100
- ipv6 address 2100::205:FFFF:FFFF:FFFF:FFFF/64
+ ipv6 address 2100:0:0:205::1/64
 !
 interface FastEthernet1/6
  no switchport
- ip address 10.112.4.254 255.255.255.0
+ ip address 200.191.162.1 255.255.255.192 secondary
+ ip address 10.112.4.1 255.255.255.0
  duplex full
  speed 100
- ipv6 address 2100::204:FFFF:FFFF:FFFF:FFFF/64
+ ipv6 address 2100:0:0:204::1/64
 !
 interface FastEthernet1/7
  duplex full
@@ -153,27 +155,27 @@ interface Vlan1
  shutdown
 !
 interface Vlan2
- ip address 200.191.162.93 255.255.255.240 secondary
- ip address 10.112.0.253 255.255.255.0
+ ip address 200.191.162.81 255.255.255.240 secondary
+ ip address 10.112.0.1 255.255.255.0
  no autostate
- ipv6 address 2100::200:FFFF:FFFF:FFFF:FFFE/64
+ ipv6 address 2100:0:0:200::1/64
 !
 interface Vlan3
- ip address 200.191.162.117 255.255.255.240 secondary
- ip address 10.112.1.253 255.255.255.0
+ ip address 200.191.162.113 255.255.255.240 secondary
+ ip address 10.112.1.1 255.255.255.0
  no autostate
- ipv6 address 2100::201:FFFF:FFFF:FFFF:FFFE/64
+ ipv6 address 2100:0:0:201::1/64
 !
 interface Vlan4
- ip address 10.112.2.253 255.255.255.0
+ ip address 10.112.2.1 255.255.255.0
  no autostate
- ipv6 address 2100::202:FFFF:FFFF:FFFF:FFFE/64
+ ipv6 address 2100:0:0:202::1/64
 !
 interface Vlan5
- ip address 200.191.162.84 255.255.255.240 secondary
- ip address 10.112.3.253 255.255.255.0
+ ip address 200.191.162.97 255.255.255.240 secondary
+ ip address 10.112.3.1 255.255.255.0
  no autostate
- ipv6 address 2100::203:FFFF:FFFF:FFFF:FFFE/64
+ ipv6 address 2100:0:0:203::1/64
 !
 ip forward-protocol nd
 !
