--- a/project-files/dynamips/a0d81492-4746-410a-83ea-8e1b60d8ae6a/configs/i10_startup-config.cfg
+++ b/project-files/dynamips/a0d81492-4746-410a-83ea-8e1b60d8ae6a/configs/i10_startup-config.cfg
@@ -1,7 +1,7 @@
 !
 
 !
-! Last configuration change at 23:15:38 UTC Fri Jan 15 2021
+! Last configuration change at 23:04:24 UTC Sat Jan 16 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -23,6 +23,11 @@ ip cef
 !
 !
 !
+ip dhcp excluded-address 192.168.2.1
+!
+ip dhcp pool 1
+ network 192.168.2.0 255.255.254.0
+ default-router 192.168.2.1 
 !
 !
 no ip domain lookup
