Ospf, default routes e erros

--- a/project-files/dynamips/a0d81492-4746-410a-83ea-8e1b60d8ae6a/configs/i10_startup-config.cfg
+++ b/project-files/dynamips/a0d81492-4746-410a-83ea-8e1b60d8ae6a/configs/i10_startup-config.cfg
@@ -1,7 +1,7 @@
 !
 
 !
-! Last configuration change at 23:04:24 UTC Sat Jan 16 2021
+! Last configuration change at 22:40:17 UTC Sun Jan 17 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -24,6 +24,7 @@ ip cef
 !
 !
 ip dhcp excluded-address 192.168.2.1
+ip dhcp excluded-address 192.168.1.1
 !
 ip dhcp pool 1
  network 192.168.2.0 255.255.254.0
@@ -59,17 +60,22 @@ ip tcp synwait-time 5
 !
 interface FastEthernet0/0
  ip address 10.112.6.10 255.255.255.252
+ ip ospf 1 area 0
  duplex half
 !
 interface FastEthernet1/0
  ip address 10.112.6.14 255.255.255.252
+ ip ospf 1 area 0
  duplex auto
  speed auto
 !
 interface FastEthernet1/1
  ip address 192.168.2.1 255.255.254.0
+ ip ospf 1 area 0
  duplex auto
  speed auto
+!
+router ospf 1
 !
 ip forward-protocol nd
 no ip http server
