--- a/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
+++ b/project-files/dynamips/adf60686-fa4f-4c77-863f-7ba4615cf3d8/configs/i4_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -26,6 +25,7 @@ no ip domain lookup
 ip auth-proxy max-nodata-conns 3
 ip admission max-nodata-conns 3
 !
+ipv6 unicast-routing
 !
 !
 !
@@ -67,13 +67,16 @@ interface FastEthernet0/1
 interface FastEthernet1/0
  no switchport
  ip address 10.112.6.5 255.255.255.252
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::5/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/1
  no switchport
  ip address 10.112.6.13 255.255.255.252
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::D/126
@@ -81,9 +84,11 @@ interface FastEthernet1/1
 interface FastEthernet1/2
  no switchport
  ip address 10.112.6.18 255.255.255.252
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::12/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/3
  switchport mode trunk
@@ -157,12 +162,17 @@ interface Vlan3
 !
 interface Vlan4
  ip address 10.112.2.2 255.255.255.0
+ no autostate
  ipv6 address 2100:0:0:202::2/126
 !
 interface Vlan5
  ip address 200.191.162.98 255.255.255.240 secondary
  ip address 10.112.3.2 255.255.255.0
+ no autostate
  ipv6 address 2100:0:0:203::2/126
+!
+router ospf 1
+ log-adjacency-changes
 !
 ip forward-protocol nd
 !
@@ -171,6 +181,9 @@ no ip http server
 no ip http secure-server
 !
 no cdp log mismatch duplex
+ipv6 router ospf 1
+ log-adjacency-changes
+!
 !
 !
 !
