--- a/project-files/dynamips/fa810282-21f3-41e8-a50c-08e271a4743c/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/fa810282-21f3-41e8-a50c-08e271a4743c/configs/i3_startup-config.cfg
@@ -1,5 +1,4 @@
 !
-!
 
 !
 version 12.4
@@ -16,9 +15,8 @@ boot-end-marker
 !
 no aaa new-model
 memory-size iomem 5
-no ip routing
 no ip icmp rate-limit unreachable
-no ip cef
+ip cef
 !
 !
 !
@@ -27,6 +25,7 @@ no ip domain lookup
 ip auth-proxy max-nodata-conns 3
 ip admission max-nodata-conns 3
 !
+ipv6 unicast-routing
 !
 !
 !
@@ -54,7 +53,6 @@ ip tcp synwait-time 5
 interface FastEthernet0/0
  description *** Unused for Layer2 EtherSwitch ***
  no ip address
- no ip route-cache
  shutdown
  duplex auto
  speed auto
@@ -62,7 +60,6 @@ interface FastEthernet0/0
 interface FastEthernet0/1
  description *** Unused for Layer2 EtherSwitch ***
  no ip address
- no ip route-cache
  shutdown
  duplex auto
  speed auto
@@ -70,13 +67,16 @@ interface FastEthernet0/1
 interface FastEthernet1/0
  no switchport
  ip address 10.112.6.1 255.255.255.252
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::1/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/1
  no switchport
  ip address 10.112.6.9 255.255.255.252
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::9/126
@@ -84,9 +84,11 @@ interface FastEthernet1/1
 interface FastEthernet1/2
  no switchport
  ip address 10.112.6.17 255.255.255.252
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::11/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/3
  switchport mode trunk
@@ -100,19 +102,23 @@ interface FastEthernet1/4
 !
 interface FastEthernet1/5
  no switchport
- ip address 200.191.162.65 255.255.255.192 secondary
+ ip address 200.191.162.65 255.255.255.240 secondary
  ip address 10.112.5.1 255.255.255.0
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:205::1/64
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/6
  no switchport
  ip address 200.191.162.1 255.255.255.192 secondary
  ip address 10.112.4.1 255.255.255.0
+ ip ospf 1 area 0
  duplex full
  speed 100
  ipv6 address 2100:0:0:204::1/64
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/7
  duplex full
@@ -152,7 +158,6 @@ interface FastEthernet1/15
 !
 interface Vlan1
  no ip address
- no ip route-cache
  shutdown
 !
 interface Vlan2
@@ -178,6 +183,9 @@ interface Vlan5
  no autostate
  ipv6 address 2100:0:0:203::1/64
 !
+router ospf 1
+ log-adjacency-changes
+!
 ip forward-protocol nd
 !
 !
@@ -185,6 +193,9 @@ no ip http server
 no ip http secure-server
 !
 no cdp log mismatch duplex
+ipv6 router ospf 1
+ log-adjacency-changes
+!
 !
 !
 !
