--- a/project-files/dynamips/32ca53b6-0a51-4d64-964f-137bfe0d368c/configs/i5_startup-config.cfg
+++ b/project-files/dynamips/32ca53b6-0a51-4d64-964f-137bfe0d368c/configs/i5_startup-config.cfg
@@ -1,8 +1,7 @@
 !
-!
 
 !
-! Last configuration change at 23:52:36 UTC Fri Jan 15 2021
+! Last configuration change at 22:41:28 UTC Sun Jan 17 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -27,7 +26,8 @@ ip cef
 !
 !
 no ip domain lookup
-no ipv6 cef
+ipv6 unicast-routing
+ipv6 cef
 !
 multilink bundle-name authenticated
 !
@@ -57,24 +57,33 @@ interface FastEthernet0/0
  ip address 10.112.6.2 255.255.255.252
  ip nat inside
  ip virtual-reassembly in
+ ip ospf 1 area 0
  duplex half
  ipv6 address 2100:0:0:206::2/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/0
  ip address 10.112.6.6 255.255.255.252
  ip nat inside
  ip virtual-reassembly in
+ ip ospf 1 area 0
  duplex auto
  speed auto
  ipv6 address 2100:0:0:206::6/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/1
- no ip address
+ ip address 90.80.70.69 255.255.255.0
  ip nat outside
  ip virtual-reassembly in
+ ip ospf 1 area 0
  shutdown
  duplex auto
  speed auto
+ ipv6 address 2001:C:B:D::3/64
+!
+router ospf 1
+ default-information originate always
 !
 ip forward-protocol nd
 no ip http server
@@ -83,9 +92,14 @@ no ip http secure-server
 !
 ip nat pool MYNATPOOL 200.191.162.121 200.191.162.125 netmask 255.255.255.248
 ip nat inside source list 2 pool MYNATPOOL overload
+ip route 0.0.0.0 0.0.0.0 90.80.70.60
 !
 access-list 2 permit 10.112.0.0 0.0.255.255
 no cdp log mismatch duplex
+ipv6 route ::/0 2001:C:B:D::2
+ipv6 router ospf 1
+ default-information originate always
+!
 !
 !
 !
