--- a/project-files/dynamips/5b4a8492-5573-4b4b-82ca-5cf8af279a0e/configs/i8_startup-config.cfg
+++ b/project-files/dynamips/5b4a8492-5573-4b4b-82ca-5cf8af279a0e/configs/i8_startup-config.cfg
@@ -1,7 +1,7 @@
 !
 
 !
-! Last configuration change at 22:08:25 UTC Sun Jan 17 2021
+! Last configuration change at 16:46:51 UTC Mon Jan 18 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -54,21 +54,22 @@ ip tcp synwait-time 5
 !
 interface FastEthernet0/0
  ip address 90.80.70.60 255.255.255.0
- shutdown
  duplex half
  ipv6 address 2001:C:B:D::2/64
 !
 interface FastEthernet1/0
- no ip address
- shutdown
+ ip address 100.0.0.2 255.255.255.0
  duplex auto
  speed auto
+ ipv6 address 3000:A:A:A::2/64
 !
 interface FastEthernet1/1
  no ip address
  shutdown
  duplex auto
  speed auto
+!
+router ospf 1
 !
 ip forward-protocol nd
 no ip http server
