--- a/project-files/dynamips/5b4a8492-5573-4b4b-82ca-5cf8af279a0e/configs/i8_startup-config.cfg
+++ b/project-files/dynamips/5b4a8492-5573-4b4b-82ca-5cf8af279a0e/configs/i8_startup-config.cfg
@@ -1,7 +1,9 @@
 !
+!
+!
 
 !
-! Last configuration change at 22:01:11 UTC Tue Jan 19 2021
+! Last configuration change at 23:18:10 UTC Tue Jan 19 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -78,7 +80,8 @@ no ip http secure-server
 ip route 200.191.162.0 255.255.255.128 90.80.70.69
 !
 no cdp log mismatch duplex
-ipv6 route 2100:0:0:200::/60 2100:0:0:206::6
+ipv6 route 2100:0:0:200::/60 2001:C:B:C::3
+ipv6 route 2100:0:0:200::/60 2001:C:B:D::3
 !
 !
 !
