--- a/project-files/dynamips/32ca53b6-0a51-4d64-964f-137bfe0d368c/configs/i5_startup-config.cfg
+++ b/project-files/dynamips/32ca53b6-0a51-4d64-964f-137bfe0d368c/configs/i5_startup-config.cfg
@@ -1,6 +1,9 @@
 !
+!
+!
 
 !
+! Last configuration change at 23:07:18 UTC Tue Jan 19 2021
 upgrade fpd auto
 version 15.1
 service timestamps debug datetime msec
@@ -79,6 +82,7 @@ interface FastEthernet1/1
  duplex auto
  speed auto
  ipv6 address 2001:C:B:D::3/64
+ ipv6 ospf 1 area 0
 !
 router ospf 1
  default-information originate always
