--- a/project-files/dynamips/fa810282-21f3-41e8-a50c-08e271a4743c/configs/i3_startup-config.cfg
+++ b/project-files/dynamips/fa810282-21f3-41e8-a50c-08e271a4743c/configs/i3_startup-config.cfg
@@ -82,6 +82,7 @@ interface FastEthernet1/1
  duplex full
  speed 100
  ipv6 address 2100:0:0:206::9/126
+ ipv6 ospf 1 area 0
 !
 interface FastEthernet1/2
  no switchport
